--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Pacifico&family=Permanent+Marker&family=Playfair:wght@300;400&family=Rubik+Puddles&family=Snippet&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Pacifico&family=Permanent+Marker&family=Playfair:wght@300;400&family=Roboto:wght@100;400;700&family=Rubik+Puddles&family=Snippet&display=swap" rel="stylesheet">
 </head>
 
 <body>
